<resources>
    <string name="app_name">Kamerka Samochodowa</string>
    <string name="access_camera_failed">Camera Access Failed, probably another application or process is using it.</string>
    <string name="OK">OK</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="camera_permission_expl">The application needs access to camera to work properly</string>
    <string name="camera_permisssion_explanation">I must have Camera Access Permission to record videos</string>
    <string name="rec_audio_permission_explanation">If I have Permission to Record Audio, I could record videos with sound</string>
    <string name="write_ext_storage_permission_explanation">Without this permission I cannot save photos and videos to your memory</string>
    <string name="microphone_enabled">Microphone has been enabled</string>
    <string name="microphone_disabled">Microphone has been disabled</string>
    <string name="photo_sound_enabled">Photo capture sound enabled</string>
    <string name="photo_sound_disabled">Photo capture sound disabled</string>
    <string name="audio_permission_not_granted">Audio Permission Denied - Silent Video Only</string>
    <string name="write_external_storage_permission_denied">I must have File permission to save movies and pictures</string>
    <string name="car_camera_photo_">car_camera_photo_</string>
    <string name="REC">REC</string>
    <string name="car_cam_photos">Car Camera Photos</string>
    <string name="car_cam_videos">Car Camera Videos</string>
    <string name="video_quality">Video Quality</string>
    <string name="length_stab_prot">Length, Stability, Protection</string>
    <string name="use_gps_satellites">Use GPS satellites</string>
    <string-array name="pref_syncConnectionTypes_values">
        <item>Example Name</item>
        <item>Android - KitKat</item>
        <item>Apple is a shit</item>
        <item>Microsoft rullez</item>
        <item>Linux sucks</item>
    </string-array>
    <string-array name="e_gps_satellite_types">
        <item>New GPS method</item>
        <item>Old GPS method</item>
        <item>Disable GPS, (no speed and elevation on camera)</item>
    </string-array>
    <string-array name="e_back_button">
        <item>Extra step</item>
        <item>Default in Android</item>
        <item>Close Application</item>
        <item>Continue working in background</item>
    </string-array>
    <string-array name="e_orientation">
        <item>Auto</item>
        <item>Landscape</item>
        <item>Reverse Landscape</item>
        <item>Portrait</item>
        <item>Reverse Portrait</item>
        <item>External Camera (USB)</item>
        <item>External Camera - 180°</item>
    </string-array>
    <string-array name="e_cam_mode">
        <item>Not set</item>
        <item>Daylight</item>
        <item>Sunny</item>
        <item>Cloudy</item>
        <item>Twilight</item>
        <item>Dark Night</item>
        <item>City Night</item>
        <item>Custom</item>
    </string-array>
    <string-array name="e_cam_falling_in_case_of_error">
        <item>Continue with default camera mode</item>
        <item>Try again without scene mode</item>
        <item>Stop with message</item>
    </string-array>
    <string-array name="e_video_quality">
        <item>1.High Quality (HQ)</item>
        <item>2.Low Quality (LQ)</item>
        <item>3.Custom Quality</item>
    </string-array>
    <string-array name="e_video_custom_resolution">
        <item>176x144 (QCIF)</item>
        <item>320x240 (QVGA)</item>
        <item>420x240 (WQVGA)</item>
        <item>352x288 (CIF)</item>
        <item>480x320 (HVGA)</item>
        <item>640x480 (VGA)</item>
        <item>720x480 (D1)</item>
        <item>800x480 (WVGA)</item>
        <item>864x480 (FWVGA)</item>
        <item>1280x720 (HD 720p)</item>
        <item>1920x1080 (HD 1080p)</item>
        <item>1920x1088 (HD 1088p)</item>
        <item>3840x2160 (4K UHD)</item>
        <item>Custom (Insert Your Resolution)</item>
    </string-array>
    <string-array name="e_video_custom_encoder">
        <item>H.264</item>
        <item>H.263</item>
        <item>MPEG4</item>
    </string-array>
    <string-array name="e_video_custom_bitrate">
        <item>High</item>
        <item>Medium-High</item>
        <item>Medium</item>
        <item>Medium-Low</item>
        <item>Low</item>
        <item>Custom</item>
    </string-array>
    <string-array name="e_video_custom_framerate">
        <item>High (30 fps)</item>
        <item>Medium-High (25 fps)</item>
        <item>Medium (20 fps)</item>
        <item>Medium-Low (15 fps)</item>
        <item>Low (10 fps)</item>
    </string-array>
    <string-array name="e_video_custom_file_format">
        <item>3GP</item>
        <item>MP4</item>
    </string-array>
    <string-array name="ev_video_camera_operation">
        <item>Maximize Stability</item>
        <item>Minimize Gaps Between Video Files</item>
    </string-array>
    <string-array name="e_video_file_length">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>40 seconds</item>
        <item>60 seconds</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="e_video_file_length_in_seconds">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>40</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>1800</item>
    </string-array>
    <string-array name="e_video_files_protection">
        <item>Force of 2g</item>
        <item>Force of 3g</item>
        <item>Force of 4g</item>
        <item>Force of 5g</item>
        <item>Force of 6g</item>
        <item>Force of 7g</item>
        <item>Force of 8g</item>
        <item>Force of 9g</item>
        <item>Force of 10g</item>
    </string-array>
    <string-array name="e_photo_snapshot_frequency">
        <item>3 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>20 seconds</item>
        <item>25 seconds</item>
        <item>30 seconds</item>
        <item>45 seconds</item>
        <item>60 seconds</item>
        <item>90 seconds</item>
        <item>1 minutes</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>5 hours</item>
    </string-array>
    <string-array name="e_photo_focus_mode">
        <item>Fixed</item>
        <item>Infinity</item>
        <item>Auto-Focus</item>
    </string-array>
    <string-array name="e_background_mode_group_buttons">
        <item>Horizontally</item>
        <item>Vercitally</item>
    </string-array>
    <string-array name="e_background_mode_size_of_buttons">
        <item>Small</item>
        <item>Large</item>
    </string-array>
    <string-array name="e_automod_start_when_charging">
        <item>Disabled</item>
        <item>Vertical landscape orientation</item>
        <item>Vertical portrait orientation</item>
        <item>Vertical landscape or portrait</item>
    </string-array>
    <string-array name="e_automod_exit_when_charger_disconnected">
        <item>Disabled</item>
        <item>Immediately</item>
        <item>After 5 seconds</item>
        <item>After 10 seconds</item>
        <item>After 30 seconds</item>
        <item>After 1 minute</item>
        <item>After 2 minutes</item>
        <item>After 5 minutes</item>
    </string-array>
    <string-array name="e_fad_date_format">
        <item>2016-09-24</item>
        <item>2016.09.24</item>
        <item>24.09.2016</item>
        <item>24/09/2016</item>
        <item>09/24/2016</item>
        <item>24-09-2016</item>
        <item>24-Sep-2016</item>
        <item>Sep 24, 2016</item>
        <item>Sat, Sep 24, 2016</item>
    </string-array>
    <string-array name="e_fad_units">
        <item>meters, km/h</item>
        <item>feet, mph</item>
        <item>yards, mph</item>
    </string-array>
    <string-array name="e_fad_speed">
        <item>Do not display</item>
        <item>With solid background color</item>
        <item>With transparent background color</item>
        <item>Without background</item>
        <item>Large font</item>
        <item>Large font with background</item>
    </string-array>
    <string-array name="e_fad_elevation">
        <item>Do not display</item>
        <item>Small font</item>
        <item>Small font with background</item>
        <item>Large font</item>
        <item>Large font with background</item>
    </string-array>
    <string name="brightness_slider_title">Brightness</string>
    <string name="general">General</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="automatic_processes">Automatic Processes</string>
    <string name="general_settings_summaries">GPS method, lock screen, brightness, back button</string>
    <string name="background_mode">Background Mode</string>
    <string name="camera_subsettings">Orientation, capture sounds, camera mode and parameters</string>
    <string name="video_subsettings">Quality, stability, length, sound, g-force, files</string>
    <string name="photo_subsettings">Resolution, frequency, focus, thumbnails, files</string>
    <string name="background_subsettings">Operation and placement of buttons on top of other apps</string>
    <string name="automatic_mode_subsettings">Start/Stop app and video/photo, car dock, low power, warning sound</string>
    <string name="formatting_and_display_subsettings">Date format, units, speed, elevation, GPS coordinates, on-screen controls</string>
    <string name="overlays">Overlays</string>
    <string name="overlays_subsettings">Overlay timestamps and GPS data (speed, elevation, GPS coordinates)</string>
    <string name="custom">Custom</string>
    <string name="dark_night">Dark Night</string>
    <string name="Not_Set">Not Set</string>
    <string name="daylight">Daylight</string>
    <string name="cloudy">Cloudy</string>
    <string name="city_night">City Night</string>
    <string name="sunny">Sunny</string>
    <string name="moonlight">Moonlight</string>
</resources>