<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="76"
        android:weightSum="302"
        >
        <!-- Left Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:orientation="vertical"
            android:weightSum="76"
            android:gravity="bottom"
            >
            <!-- Dark Night -->
            <LinearLayout
                style="@style/verticalModesListPanel"
                android:id="@+id/dark_night_button_ll_id"
                android:layout_marginRight="1dp"
                android:onClick="newModeButtonCliked"
                >
                <ImageView
                    style="@style/modesListImageStyle"
                    android:src="@mipmap/dark_night"
                    />
                <TextView
                    style="@style/textUnderIconListImageStyle"
                    android:text="@string/dark_night"
                    />
            </LinearLayout>
            <!-- Daylight -->
            <LinearLayout
                style="@style/verticalModesListPanel"
                android:id="@+id/daylight_button_ll_id"
                android:layout_marginRight="1dp"
                android:onClick="newModeButtonCliked"
                >
                <ImageView
                    style="@style/modesListImageStyle"
                    android:src="@mipmap/daylight"
                    />
                <TextView
                    style="@style/textUnderIconListImageStyle"
                    android:text="@string/daylight"
                    />
            </LinearLayout>
            <!-- Cloudy -->
            <LinearLayout
                style="@style/verticalModesListPanel"
                android:id="@+id/cloudy_button_ll_id"
                android:layout_marginRight="1dp"
                android:onClick="newModeButtonCliked"
                >
                <ImageView
                    style="@style/modesListImageStyle"
                    android:src="@mipmap/cloudy"
                    />
                <TextView
                    style="@style/textUnderIconListImageStyle"
                    android:text="@string/cloudy"
                    />
            </LinearLayout>
            <!-- Custom -->
            <LinearLayout
                style="@style/verticalModesListPanel"
                android:id="@+id/custom_button_ll_id"
                android:layout_marginRight="1dp"
                android:onClick="newModeButtonCliked"
                >
                <ImageView
                    style="@style/modesListImageStyle"
                    android:src="@mipmap/custom"
                    />
                <TextView
                    style="@style/textUnderIconListImageStyle"
                    android:text="@string/custom"
                    />
            </LinearLayout>
        </LinearLayout>
        <!-- Right Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:orientation="vertical"
            android:weightSum="76"
            android:gravity="bottom"
            >
            <!-- City Night -->
            <LinearLayout
                style="@style/verticalModesListPanel"
                android:id="@+id/city_night_button_ll_id"
                android:onClick="newModeButtonCliked"
                >
                <ImageView
                    style="@style/modesListImageStyle"
                    android:src="@mipmap/city_night"
                    />
                <TextView
                    style="@style/textUnderIconListImageStyle"
                    android:text="@string/city_night"
                    />
            </LinearLayout>
            <!-- Sunny -->
            <LinearLayout
                style="@style/verticalModesListPanel"
                android:id="@+id/sunny_button_ll_id"
                android:onClick="newModeButtonCliked"
                >
                <ImageView
                    style="@style/modesListImageStyle"
                    android:src="@mipmap/sunny"
                    />
                <TextView
                    style="@style/textUnderIconListImageStyle"
                    android:text="@string/sunny"
                    />
            </LinearLayout>
            <!-- Moonlight -->
            <LinearLayout
                style="@style/verticalModesListPanel"
                android:id="@+id/moonlight_button_ll_id"
                android:onClick="newModeButtonCliked"
                >
                <ImageView
                    style="@style/modesListImageStyle"
                    android:src="@mipmap/moonlight"
                    />
                <TextView
                    style="@style/textUnderIconListImageStyle"
                    android:text="@string/moonlight"
                    />
            </LinearLayout>
            <!-- Not Set -->
            <LinearLayout
                style="@style/verticalModesListPanel"
                android:id="@+id/not_set_button_ll_id"
                android:onClick="newModeButtonCliked"
                >
                <ImageView
                    style="@style/modesListImageStyle"
                    android:src="@mipmap/not_set"
                    />
                <TextView
                    style="@style/textUnderIconListImageStyle"
                    android:text="@string/Not_Set"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>